# blockchain-network-registry-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
config/: default.toml  test.toml
migrations/: 20241229000000_create_networks_table.sql
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/use_cases/: mod.rs
src/application/use_cases/networks/: create_network.rs  delete_network.rs  get_active_networks.rs  get_network_by_id.rs  mod.rs  partial_update_network.rs  update_network.rs
src/domain/: mod.rs
src/domain/gateways/: mod.rs  network_repository.rs
src/domain/models/: mod.rs  network.rs
src/infrastructure/: mod.rs
src/infrastructure/driven_adapters/: config.rs  database.rs  mod.rs
src/infrastructure/driven_adapters/network_repository/: mod.rs  postgres.rs
src/infrastructure/driving_adapters/: mod.rs
src/infrastructure/driving_adapters/api_rest/: mod.rs
src/infrastructure/driving_adapters/api_rest/dto/: mod.rs  network.rs
src/infrastructure/driving_adapters/api_rest/handlers/: mod.rs  networks.rs
src/infrastructure/driving_adapters/api_rest/middleware/: auth.rs  mod.rs  request_id.rs
src/shared/: mod.rs
src/shared/errors/: mod.rs
tests/: networks_e2e.rs
tests/common/: mod.rs
