[package]
name = "blockchain-network-registry"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Blockchain Network Registry API - A Rust-based microservice for managing blockchain networks"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4"
governor = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1"
lazy_static = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
config = "0.14"

# Authentication
jsonwebtoken = "9"

# Security - zeroing sensitive data from memory
zeroize = { version = "1", features = ["derive"] }

# Compile-time regex validation
once_cell = "1"

# Async traits
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"
tokio-test = "0.4"
rust_decimal_macros = "1"
tower = { version = "0.5", features = ["util"] }

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[[bin]]
name = "blockchain-network-registry"
path = "src/main.rs"

[lib]
name = "blockchain_network_registry"
path = "src/lib.rs"
